# portfolio_web_app

./: .env.test  Dockerfile  pylintrc  pyproject.toml
.github/workflows/: build_docker.yaml  ci.yaml  deploy.yaml
src/: container.py  main.py  settings.py
src/api/web/: app.py  command.py  routers.py  views.py
src/application/: mnist.py
src/domain/: service.py  vo.py
src/infrastructure/: local_mnist.py
tests/: conftest.py
tests/api/: conftest.py  test_default.py  test_mnist.py
tests/application/: test_mnist.py
tests/domain/: test_service.py
tests/infrastructure/: test_local_mnist.py
